--- a/sass/app.scss
+++ b/sass/app.scss
@@ -37,7 +37,7 @@ a{
     text-decoration: none;
 }
 p {
-    font-family: "Marianne-regular";
+    font-family: "Marianne-regular", sans-serif;
     font-size: 1.2rem;
 }
 
@@ -55,7 +55,7 @@ p {
         height: 100%;
         h1{
             font-size: 3rem;
-            font-family: "Marianne-bold";
+            font-family: "Marianne-bold", sans-serif;
             margin-bottom: 64px;
         }
     }
@@ -113,7 +113,7 @@ p {
     .titre{
         margin-top: 80px;
         h1 {
-            font-family: "Marianne-regular";
+            font-family: "Marianne-regular", sans-serif;
             font-size: 2rem;
             text-align: center;
         }
@@ -125,11 +125,11 @@ p {
             .question{
                 margin-bottom: 80px;
                 h2{
-                    font-family: "Marianne-bold";
+                    font-family: "Marianne-bold", sans-serif;
                     font-size: 1.1rem;
                     span{
                         font-size: 0.8rem;
-                        font-family: "Marianne-light";
+                        font-family: "Marianne-light", sans-serif;
                     }
                     margin-bottom: 16px;
                 }
@@ -193,17 +193,17 @@ p {
                 .wrong{
                     color: var(--rouge-main);
                     font-size: 0.8rem;
-                    font-family: "Marianne-light";
+                    font-family: "Marianne-light", sans-serif;
                 }
                 .wrong-2{
                     color: var(--rouge-main);
                     font-size: 0.8rem;
-                    font-family: "Marianne-light";
+                    font-family: "Marianne-light", sans-serif;
                 }
                 .wrong-3{
                     color: var(--rouge-main);
                     font-size: 0.8rem;
-                    font-family: "Marianne-light";
+                    font-family: "Marianne-light", sans-serif;
                 }
             }
         }
@@ -248,12 +248,12 @@ p {
 .text-cursed{
     h1{
         font-size: 1.8rem;
-        font-family: "Marianne-regular";
+        font-family: "Marianne-regular", sans-serif;
         margin-bottom: 10px;
     }
     h2{
         font-size: 1.6rem;
-        font-family: "Marianne-regular";
+        font-family: "Marianne-regular", sans-serif;
         margin-bottom: 100px;
     }
     input {
@@ -316,12 +316,12 @@ p {
     h1{
         margin-top: 25vh;
         font-size: 2.5rem;
-        font-family: "Marianne-bold";
+        font-family: "Marianne-bold", sans-serif;
         margin-bottom: 24px;
     }
     h2{
         font-size: 1.5rem;
-        font-family: "Marianne-regular";
+        font-family: "Marianne-regular", sans-serif;
         margin-bottom: 64px;
     }
 }
@@ -332,5 +332,5 @@ p {
     left: 50%;
     transform: translateX(-50%);
     font-size: 0.8rem;
-    font-family: "Marianne-light";
+    font-family: "Marianne-light", sans-serif;
 }
