--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -442,7 +442,7 @@ a {
 
 /* line 39, ../sass/app.scss */
 p {
-  font-family: "Marianne-regular";
+  font-family: "Marianne-regular", sans-serif;
   font-size: 1.2rem;
 }
 
@@ -466,7 +466,7 @@ p {
 /* line 56, ../sass/app.scss */
 .index .row h1 {
   font-size: 3rem;
-  font-family: "Marianne-bold";
+  font-family: "Marianne-bold", sans-serif;
   margin-bottom: 64px;
 }
 /* line 62, ../sass/app.scss */
@@ -535,7 +535,7 @@ p {
 }
 /* line 115, ../sass/app.scss */
 .etape-1 .titre h1 {
-  font-family: "Marianne-regular";
+  font-family: "Marianne-regular", sans-serif;
   font-size: 2rem;
   text-align: center;
 }
@@ -553,14 +553,14 @@ p {
 }
 /* line 127, ../sass/app.scss */
 .etape-1 .form .questions .question h2 {
-  font-family: "Marianne-bold";
+  font-family: "Marianne-bold", sans-serif;
   font-size: 1.1rem;
   margin-bottom: 16px;
 }
 /* line 130, ../sass/app.scss */
 .etape-1 .form .questions .question h2 span {
   font-size: 0.8rem;
-  font-family: "Marianne-light";
+  font-family: "Marianne-light", sans-serif;
 }
 /* line 136, ../sass/app.scss */
 .etape-1 .form .questions .question #Q1 {
@@ -633,19 +633,19 @@ p {
 .etape-1 .form .questions .question .wrong {
   color: var(--rouge-main);
   font-size: 0.8rem;
-  font-family: "Marianne-light";
+  font-family: "Marianne-light", sans-serif;
 }
 /* line 198, ../sass/app.scss */
 .etape-1 .form .questions .question .wrong-2 {
   color: var(--rouge-main);
   font-size: 0.8rem;
-  font-family: "Marianne-light";
+  font-family: "Marianne-light", sans-serif;
 }
 /* line 203, ../sass/app.scss */
 .etape-1 .form .questions .question .wrong-3 {
   color: var(--rouge-main);
   font-size: 0.8rem;
-  font-family: "Marianne-light";
+  font-family: "Marianne-light", sans-serif;
 }
 /* line 211, ../sass/app.scss */
 .etape-1 .input {
@@ -692,13 +692,13 @@ p {
 /* line 249, ../sass/app.scss */
 .text-cursed h1 {
   font-size: 1.8rem;
-  font-family: "Marianne-regular";
+  font-family: "Marianne-regular", sans-serif;
   margin-bottom: 10px;
 }
 /* line 254, ../sass/app.scss */
 .text-cursed h2 {
   font-size: 1.6rem;
-  font-family: "Marianne-regular";
+  font-family: "Marianne-regular", sans-serif;
   margin-bottom: 100px;
 }
 /* line 259, ../sass/app.scss */
@@ -770,13 +770,13 @@ p {
 .text-fin h1 {
   margin-top: 25vh;
   font-size: 2.5rem;
-  font-family: "Marianne-bold";
+  font-family: "Marianne-bold", sans-serif;
   margin-bottom: 24px;
 }
 /* line 322, ../sass/app.scss */
 .text-fin h2 {
   font-size: 1.5rem;
-  font-family: "Marianne-regular";
+  font-family: "Marianne-regular", sans-serif;
   margin-bottom: 64px;
 }
 
@@ -787,5 +787,92 @@ p {
   left: 50%;
   transform: translateX(-50%);
   font-size: 0.8rem;
-  font-family: "Marianne-light";
+  font-family: "Marianne-light", sans-serif;
+}
+
+@media (max-width: 1600px) {
+  /* line 3, ../sass/_responsive.scss */
+  .lab .cloud-1 {
+    z-index: -1;
+  }
+}
+@media (max-width: 1300px) {
+  /* line 10, ../sass/_responsive.scss */
+  .text-cursed .col-4 {
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+@media (max-width: 1000px) {
+  /* line 19, ../sass/_responsive.scss */
+  .container {
+    margin-left: 10px;
+  }
+
+  /* line 23, ../sass/_responsive.scss */
+  .etape-1 .cloud-1 {
+    top: 11%;
+    left: 1%;
+  }
+  /* line 27, ../sass/_responsive.scss */
+  .etape-1 .flying-text {
+    top: 20%;
+    left: 1%;
+  }
+  /* line 31, ../sass/_responsive.scss */
+  .etape-1 .cloud-2 {
+    display: none;
+  }
+  /* line 34, ../sass/_responsive.scss */
+  .etape-1 .cloud-3 {
+    width: 200px;
+  }
+
+  /* line 39, ../sass/_responsive.scss */
+  .curse .cloud-1 {
+    display: none;
+  }
+
+  /* line 44, ../sass/_responsive.scss */
+  .text-cursed .col-4 {
+    -ms-flex: 0 0 75%;
+    flex: 0 0 75%;
+    max-width: 75%;
+  }
+}
+@media (min-width: 850px) {
+  /* line 53, ../sass/_responsive.scss */
+  .desktop-none {
+    display: none;
+  }
+}
+@media (max-width: 850px) {
+  /* line 59, ../sass/_responsive.scss */
+  .lab .cloud-1 {
+    display: none;
+  }
+  /* line 62, ../sass/_responsive.scss */
+  .lab .cloud-2 {
+    display: none;
+  }
+  /* line 65, ../sass/_responsive.scss */
+  .lab .cloud-3 {
+    display: none;
+  }
+  /* line 68, ../sass/_responsive.scss */
+  .lab .cloud-4 {
+    display: none;
+  }
+
+  /* line 73, ../sass/_responsive.scss */
+  .maze p {
+    display: none;
+  }
+}
+@media (max-width: 700px) {
+  /* line 80, ../sass/_responsive.scss */
+  .text-cursed .col-4 {
+    margin-top: 50%;
+  }
 }
