--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -381,6 +381,18 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: none;
 }
 
+@font-face {
+  font-family: "Marianne-regular";
+  src: url("../typo/Marianne-Regular.woff2");
+}
+@font-face {
+  font-family: "Marianne-bold";
+  src: url("../typo/Marianne-Bold.woff2");
+}
+@font-face {
+  font-family: "Marianne-light";
+  src: url("../typo/Marianne-Light.woff2");
+}
 /* line 1, ../sass/_buttons.scss */
 .btn {
   padding: 15px 38px;
@@ -408,19 +420,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   transform: rotate(45deg) translate(10px, -10px);
 }
 
-@font-face {
-  font-family: "Marianne-regular";
-  src: url("../typo/Marianne-Regular.woff2");
-}
-@font-face {
-  font-family: "Marianne-bold";
-  src: url("../typo/Marianne-bold.woff2");
-}
-@font-face {
-  font-family: "Marianne-light";
-  src: url("../typo/Marianne-light.woff2");
-}
-/* line 24, ../sass/app.scss */
+/* line 8, ../sass/app.scss */
 :root {
   --noir-main: #1F1F1F;
   --blanc-main: #FFFFFF;
@@ -430,23 +430,23 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   --rouge-main: #E30613;
 }
 
-/* line 33, ../sass/app.scss */
+/* line 17, ../sass/app.scss */
 body {
   overflow-x: hidden;
 }
 
-/* line 36, ../sass/app.scss */
+/* line 20, ../sass/app.scss */
 a {
   text-decoration: none;
 }
 
-/* line 39, ../sass/app.scss */
+/* line 23, ../sass/app.scss */
 p {
   font-family: "Marianne-regular", sans-serif;
   font-size: 1.2rem;
 }
 
-/* line 45, ../sass/app.scss */
+/* line 29, ../sass/app.scss */
 .logo-crous {
   position: absolute;
   max-width: 85px;
@@ -455,39 +455,39 @@ p {
   top: 50px;
 }
 
-/* line 52, ../sass/app.scss */
+/* line 36, ../sass/app.scss */
 .index {
   height: 100vh;
 }
-/* line 54, ../sass/app.scss */
+/* line 38, ../sass/app.scss */
 .index .row {
   height: 100%;
 }
-/* line 56, ../sass/app.scss */
+/* line 40, ../sass/app.scss */
 .index .row h1 {
   font-size: 3rem;
   font-family: "Marianne-bold", sans-serif;
   margin-bottom: 64px;
 }
-/* line 62, ../sass/app.scss */
+/* line 46, ../sass/app.scss */
 .index .cloud-1 {
   position: absolute;
   width: 17%;
   right: 22%;
   top: 20%;
 }
-/* line 68, ../sass/app.scss */
+/* line 52, ../sass/app.scss */
 .index .cloud-2 {
   position: absolute;
   bottom: 30%;
   left: 20%;
 }
 
-/* line 74, ../sass/app.scss */
+/* line 58, ../sass/app.scss */
 .etape-1 {
   width: 100%;
 }
-/* line 76, ../sass/app.scss */
+/* line 60, ../sass/app.scss */
 .etape-1 .cloud-1 {
   position: absolute;
   width: 265px;
@@ -495,78 +495,78 @@ p {
   cursor: move;
   z-index: 1;
 }
-/* line 83, ../sass/app.scss */
+/* line 67, ../sass/app.scss */
 .etape-1 .flying-text {
   position: absolute;
   top: 22%;
   z-index: 0;
 }
-/* line 88, ../sass/app.scss */
+/* line 72, ../sass/app.scss */
 .etape-1 .cloud-2 {
   position: absolute;
   width: 120px;
   left: 51%;
   top: 10%;
 }
-/* line 94, ../sass/app.scss */
+/* line 78, ../sass/app.scss */
 .etape-1 .cloud-3 {
   position: absolute;
   width: 356px;
   right: -10%;
   bottom: 30%;
 }
-/* line 100, ../sass/app.scss */
+/* line 84, ../sass/app.scss */
 .etape-1 .cloud-4 {
   position: absolute;
   width: 176px;
   bottom: 12%;
   left: 25%;
 }
-/* line 107, ../sass/app.scss */
+/* line 91, ../sass/app.scss */
 .etape-1 .easter-egg {
   position: absolute;
   right: 5%;
   top: 5%;
   color: var(--blanc-main);
 }
-/* line 113, ../sass/app.scss */
+/* line 97, ../sass/app.scss */
 .etape-1 .titre {
   margin-top: 80px;
 }
-/* line 115, ../sass/app.scss */
+/* line 99, ../sass/app.scss */
 .etape-1 .titre h1 {
   font-family: "Marianne-regular", sans-serif;
   font-size: 2rem;
   text-align: center;
 }
-/* line 121, ../sass/app.scss */
+/* line 105, ../sass/app.scss */
 .etape-1 .form {
   margin-top: 133px;
 }
-/* line 123, ../sass/app.scss */
+/* line 107, ../sass/app.scss */
 .etape-1 .form .questions {
   height: fit-content;
 }
-/* line 125, ../sass/app.scss */
+/* line 109, ../sass/app.scss */
 .etape-1 .form .questions .question {
   margin-bottom: 80px;
 }
-/* line 127, ../sass/app.scss */
+/* line 111, ../sass/app.scss */
 .etape-1 .form .questions .question h2 {
   font-family: "Marianne-bold", sans-serif;
   font-size: 1.1rem;
   margin-bottom: 16px;
 }
-/* line 130, ../sass/app.scss */
+/* line 114, ../sass/app.scss */
 .etape-1 .form .questions .question h2 span {
   font-size: 0.8rem;
   font-family: "Marianne-light", sans-serif;
 }
-/* line 136, ../sass/app.scss */
+/* line 120, ../sass/app.scss */
 .etape-1 .form .questions .question #Q1 {
   text-transform: uppercase;
 }
-/* line 139, ../sass/app.scss */
+/* line 123, ../sass/app.scss */
 .etape-1 .form .questions .question .check-1 {
   width: 54px;
   height: 56px;
@@ -575,19 +575,19 @@ p {
   border: none;
   cursor: pointer;
 }
-/* line 146, ../sass/app.scss */
+/* line 130, ../sass/app.scss */
 .etape-1 .form .questions .question .check-1 svg {
   color: var(--blanc-main);
 }
-/* line 149, ../sass/app.scss */
+/* line 133, ../sass/app.scss */
 .etape-1 .form .questions .question .check-1.green {
   background-color: var(--vert-main);
 }
-/* line 152, ../sass/app.scss */
+/* line 136, ../sass/app.scss */
 .etape-1 .form .questions .question .check-1.red {
   background-color: var(--rouge-main);
 }
-/* line 157, ../sass/app.scss */
+/* line 141, ../sass/app.scss */
 .etape-1 .form .questions .question .check-2 {
   width: 54px;
   height: 56px;
@@ -596,19 +596,19 @@ p {
   cursor: pointer;
   border: none;
 }
-/* line 164, ../sass/app.scss */
+/* line 148, ../sass/app.scss */
 .etape-1 .form .questions .question .check-2 svg {
   color: var(--blanc-main);
 }
-/* line 167, ../sass/app.scss */
+/* line 151, ../sass/app.scss */
 .etape-1 .form .questions .question .check-2.green {
   background-color: var(--vert-main);
 }
-/* line 171, ../sass/app.scss */
+/* line 155, ../sass/app.scss */
 .etape-1 .form .questions .question .check-2.red {
   background-color: var(--rouge-main);
 }
-/* line 175, ../sass/app.scss */
+/* line 159, ../sass/app.scss */
 .etape-1 .form .questions .question .check-3 {
   width: 54px;
   height: 56px;
@@ -617,42 +617,42 @@ p {
   cursor: pointer;
   border: none;
 }
-/* line 182, ../sass/app.scss */
+/* line 166, ../sass/app.scss */
 .etape-1 .form .questions .question .check-3 svg {
   color: var(--blanc-main);
 }
-/* line 185, ../sass/app.scss */
+/* line 169, ../sass/app.scss */
 .etape-1 .form .questions .question .check-3.green {
   background-color: var(--vert-main);
 }
-/* line 189, ../sass/app.scss */
+/* line 173, ../sass/app.scss */
 .etape-1 .form .questions .question .check-3.red {
   background-color: var(--rouge-main);
 }
-/* line 193, ../sass/app.scss */
+/* line 177, ../sass/app.scss */
 .etape-1 .form .questions .question .wrong {
   color: var(--rouge-main);
   font-size: 0.8rem;
   font-family: "Marianne-light", sans-serif;
 }
-/* line 198, ../sass/app.scss */
+/* line 182, ../sass/app.scss */
 .etape-1 .form .questions .question .wrong-2 {
   color: var(--rouge-main);
   font-size: 0.8rem;
   font-family: "Marianne-light", sans-serif;
 }
-/* line 203, ../sass/app.scss */
+/* line 187, ../sass/app.scss */
 .etape-1 .form .questions .question .wrong-3 {
   color: var(--rouge-main);
   font-size: 0.8rem;
   font-family: "Marianne-light", sans-serif;
 }
-/* line 211, ../sass/app.scss */
+/* line 195, ../sass/app.scss */
 .etape-1 .input {
   justify-content: space-between;
   display: flex;
 }
-/* line 214, ../sass/app.scss */
+/* line 198, ../sass/app.scss */
 .etape-1 .input input {
   width: 90%;
   height: 56px;
@@ -660,28 +660,28 @@ p {
   border-radius: 8px;
 }
 
-/* line 223, ../sass/app.scss */
+/* line 207, ../sass/app.scss */
 .curse .cloud-1 {
   position: absolute;
   width: 265px;
   top: 15%;
   z-index: 1;
 }
-/* line 229, ../sass/app.scss */
+/* line 213, ../sass/app.scss */
 .curse .cloud-2 {
   position: absolute;
   width: 120px;
   left: 51%;
   top: 10%;
 }
-/* line 235, ../sass/app.scss */
+/* line 219, ../sass/app.scss */
 .curse .cloud-3 {
   position: absolute;
   width: 356px;
   right: -10%;
   bottom: 30%;
 }
-/* line 241, ../sass/app.scss */
+/* line 225, ../sass/app.scss */
 .curse .cloud-4 {
   position: absolute;
   width: 176px;
@@ -689,37 +689,37 @@ p {
   left: 25%;
 }
 
-/* line 249, ../sass/app.scss */
+/* line 233, ../sass/app.scss */
 .text-cursed h1 {
   font-size: 1.8rem;
   font-family: "Marianne-regular", sans-serif;
   margin-bottom: 10px;
 }
-/* line 254, ../sass/app.scss */
+/* line 238, ../sass/app.scss */
 .text-cursed h2 {
   font-size: 1.6rem;
   font-family: "Marianne-regular", sans-serif;
   margin-bottom: 100px;
 }
-/* line 259, ../sass/app.scss */
+/* line 243, ../sass/app.scss */
 .text-cursed input {
   width: 90%;
   height: 56px;
   border: 1px solid var(--gris-main);
   border-radius: 8px;
 }
-/* line 265, ../sass/app.scss */
+/* line 249, ../sass/app.scss */
 .text-cursed .col-4 {
   height: 50vh;
   margin-top: 10%;
 }
-/* line 268, ../sass/app.scss */
+/* line 252, ../sass/app.scss */
 .text-cursed .col-4 .input {
   justify-content: space-between;
   display: flex;
   width: 100%;
 }
-/* line 272, ../sass/app.scss */
+/* line 256, ../sass/app.scss */
 .text-cursed .col-4 .input .check-cursed {
   width: 54px;
   height: 56px;
@@ -728,37 +728,37 @@ p {
   border: none;
   cursor: pointer;
 }
-/* line 279, ../sass/app.scss */
+/* line 263, ../sass/app.scss */
 .text-cursed .col-4 .input .check-cursed svg {
   color: var(--blanc-main);
 }
-/* line 282, ../sass/app.scss */
+/* line 266, ../sass/app.scss */
 .text-cursed .col-4 .input .check-cursed.red {
   background-color: var(--rouge-main);
 }
 
-/* line 290, ../sass/app.scss */
+/* line 274, ../sass/app.scss */
 .lab .cloud-1 {
   position: absolute;
   width: 265px;
   top: 15%;
   z-index: 1;
 }
-/* line 296, ../sass/app.scss */
+/* line 280, ../sass/app.scss */
 .lab .cloud-2 {
   position: absolute;
   width: 120px;
   right: 10%;
   top: 10%;
 }
-/* line 302, ../sass/app.scss */
+/* line 286, ../sass/app.scss */
 .lab .cloud-3 {
   position: absolute;
   width: 356px;
   right: -10%;
   bottom: 30%;
 }
-/* line 308, ../sass/app.scss */
+/* line 292, ../sass/app.scss */
 .lab .cloud-4 {
   position: absolute;
   width: 176px;
@@ -766,21 +766,21 @@ p {
   left: 10%;
 }
 
-/* line 316, ../sass/app.scss */
+/* line 300, ../sass/app.scss */
 .text-fin h1 {
   margin-top: 25vh;
   font-size: 2.5rem;
   font-family: "Marianne-bold", sans-serif;
   margin-bottom: 24px;
 }
-/* line 322, ../sass/app.scss */
+/* line 306, ../sass/app.scss */
 .text-fin h2 {
   font-size: 1.5rem;
   font-family: "Marianne-regular", sans-serif;
   margin-bottom: 64px;
 }
 
-/* line 329, ../sass/app.scss */
+/* line 313, ../sass/app.scss */
 .copyright {
   position: absolute;
   bottom: 1%;
