--- a/sass/app.scss
+++ b/sass/app.scss
@@ -11,21 +11,38 @@
     --blanc-main: #FFFFFF;
     --gris-main: #D9D9D9;
     --bleu-main: #3A60C4;
+    --bleu-fonce: #010041;
     --vert-main: #52CE34; 
     --rouge-main:#E30613;
 }
 body{
     overflow-x: hidden;
+    background-color: var(--bleu-fonce);
 }
 a{
     text-decoration: none;
 }
+h1{
+    color: var(--blanc-main);
+}
+h2{
+    color: var(--blanc-main);
+}
+h3{
+    color: var(--blanc-main);
+}
+h4{
+    color: var(--blanc-main);
+}
 p {
     font-family: "Marianne-regular", sans-serif;
     font-size: 1.2rem;
+    color: var(--blanc-main);
 }
 
-
+#maze_output{
+    color: var(--blanc-main);
+}
 .logo-crous{
     position: absolute;
     max-width: 85px;
@@ -92,7 +109,7 @@ p {
         position: absolute;
         right: 5%;
         top: 5%;
-        color: var(--blanc-main);
+        color: var(--bleu-fonce);
     }
     .titre{
         margin-top: 80px;
