--- a/sass/app.scss
+++ b/sass/app.scss
@@ -325,6 +325,9 @@ p {
         font-family: "Marianne-regular", sans-serif;
         margin-bottom: 64px;
     }
+    video{
+        width: 100%;
+    }
 }
 
 .copyright{
